--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     container_name: db_docker
     ports:
       - "2345:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data/pgdata
     env_file:
       - .env
+    restart: unless-stopped
 
   app:
     build:
@@ -20,3 +23,6 @@ services:
     depends_on:
       - db
     command: gunicorn app.main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000
+
+volumes:
+    db-data:
