--- a/.github/workflows/docker_build_deploy.yml
+++ b/.github/workflows/docker_build_deploy.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }}
-      - run: docker build -t ghcr.io/$GITHUB_ACTOR/github-parser:latest .
-      - run: docker image push ghcr.io/$GITHUB_ACTOR/github-parser:latest
+      - run: docker build -t github-parser:latest .
+      - run: docker image push github-parser:latest
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -37,4 +37,4 @@ jobs:
       - run: echo "${{ secrets.PRODUCTION_SSH_KEY }}" > ${{ env.SSH_KEY_PATH }} && chmod 600 ${{ env.SSH_KEY_PATH }}
       - run: scp -o StrictHostKeyChecking=no -i ${{ env.SSH_KEY_PATH }} .env ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }}:github-api/.env
       - run: scp -o StrictHostKeyChecking=no -i ${{ env.SSH_KEY_PATH }} docker-compose.yml ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }}:github-api/docker-compose.yml
-      - run: ssh -i ${{ env.SSH_KEY_PATH }} ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }} "cd github-api && docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }} && docker pull ghcr.io/$GITHUB_ACTOR/github-parser:latest && docker-compose -f docker-compose.production.yml --env-file=.env up -d && docker system prune --all --force"
+      - run: ssh -i ${{ env.SSH_KEY_PATH }} ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }} "cd github-api && docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }} && docker pull github-parser:latest && docker-compose -f docker-compose.production.yml --env-file=.env up -d && docker system prune --all --force"
