--- a/.github/workflows/docker_build_deploy.yml
+++ b/.github/workflows/docker_build_deploy.yml
@@ -10,10 +10,11 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
+      - run: echo "ACTOR=${$GITHUB_ACTOR,,}" >>${GITHUB_ENV}
       - uses: actions/checkout@master
       - run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }}
-      - run: docker build -t github-parser:latest .
-      - run: docker image push github-parser:latest
+      - run: docker build -t ghcr.io/${ACTOR}/github-parser:latest .
+      - run: docker image push ghcr.io/${ACTOR}/github-parser:latest
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -37,4 +38,4 @@ jobs:
       - run: echo "${{ secrets.PRODUCTION_SSH_KEY }}" > ${{ env.SSH_KEY_PATH }} && chmod 600 ${{ env.SSH_KEY_PATH }}
       - run: scp -o StrictHostKeyChecking=no -i ${{ env.SSH_KEY_PATH }} .env ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }}:github-api/.env
       - run: scp -o StrictHostKeyChecking=no -i ${{ env.SSH_KEY_PATH }} docker-compose.yml ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }}:github-api/docker-compose.yml
-      - run: ssh -i ${{ env.SSH_KEY_PATH }} ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }} "cd github-api && docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }} && docker pull github-parser:latest && docker-compose -f docker-compose.production.yml --env-file=.env up -d && docker system prune --all --force"
+      - run: ssh -i ${{ env.SSH_KEY_PATH }} ${{ secrets.PRODUCTION_SSH_USERNAME }}@${{ secrets.PRODUCTION_SSH_HOST }} "cd github-api && docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }} && docker pull ghcr.io/${ACTOR}/github-parser:latest && docker-compose -f docker-compose.production.yml --env-file=.env up -d && docker system prune --all --force"
