--- a/.github/workflows/docker_build_deploy.yml
+++ b/.github/workflows/docker_build_deploy.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
-      - run: echo "ACTOR=${$GITHUB_ACTOR@L}" >>${GITHUB_ENV}
+      - run: echo "ACTOR=${$GITHUB_ACTOR@L}" >>${{ GITHUB_ENV }}
       - uses: actions/checkout@master
       - run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.PAT }}
       - run: docker build -t ghcr.io/${ACTOR}/github-parser:latest .
