--- a/.github/workflows/docker_build_deploy.yml
+++ b/.github/workflows/docker_build_deploy.yml
@@ -19,6 +19,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: build
+    env:
+      SSH_KEY_PATH: /tmp/ssh_key
     steps:
       - name: Checkout
         uses: actions/checkout@v2
