--- a/.github/workflows/docker_build_deploy.yml
+++ b/.github/workflows/docker_build_deploy.yml
@@ -22,6 +22,7 @@ jobs:
     env:
       SSH_KEY_PATH: /tmp/ssh_key
     steps:
+      - run: echo "ACTOR=${GITHUB_ACTOR@L}" >> ${GITHUB_ENV}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Make envfile
