--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi~=0.110.1
 pydantic~=2.6.4
 requests~=2.31.0
-uvicorn
-gunicorn
+uvicorn~=0.29.0
+gunicorn~=21.2.0
 psycopg2-binary
 asyncpg~=0.29.0
 psycopg2~=2.9.9
